--- a/3DGameEngine.vcxproj
+++ b/3DGameEngine.vcxproj
@@ -107,7 +107,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile />
-      <AdditionalIncludeDirectories>D:\Proyects\3DGameEngine\dynahex;D:\Proyects\3DGameEngine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Proyects\3DGameEngine;C:\Proyects\3DGameEngine\dynahex;D:\Proyects\3DGameEngine\dynahex;D:\Proyects\3DGameEngine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
