--- a/3DGameEngine.vcxproj.filters
+++ b/3DGameEngine.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClCompile Include="demos\Blob.cpp">
       <Filter>Source Files\dynahex\demos</Filter>
     </ClCompile>
+    <ClCompile Include="src\body.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
+    <ClCompile Include="src\fgen.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
+    <ClCompile Include="src\world.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="olcConsoleGameEngine.h">
@@ -93,6 +102,15 @@
       <Filter>Header Files\dynahex</Filter>
     </ClInclude>
     <ClInclude Include="dynahex\pworld.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\body.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\fgen.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\world.h">
       <Filter>Header Files\dynahex</Filter>
     </ClInclude>
   </ItemGroup>
