--- a/3DGameEngine.vcxproj
+++ b/3DGameEngine.vcxproj
@@ -135,13 +135,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="demos\Blob.cpp" />
+    <ClCompile Include="demos\Ragdoll.cpp" />
     <ClCompile Include="main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\Proyects\3DGameEngine</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="demos\Firework.cpp" />
     <ClCompile Include="src\body.cpp" />
+    <ClCompile Include="src\collide_broad.cpp" />
+    <ClCompile Include="src\collide_narrow.cpp" />
+    <ClCompile Include="src\contacts.cpp" />
     <ClCompile Include="src\core.cpp" />
     <ClCompile Include="src\fgen.cpp" />
+    <ClCompile Include="src\joints.cpp" />
     <ClCompile Include="src\particle.cpp" />
     <ClCompile Include="src\pcontacts.cpp" />
     <ClCompile Include="src\pfgen.cpp" />
@@ -154,9 +159,13 @@
     <ClInclude Include="App.cpp" />
     <ClInclude Include="App.h" />
     <ClInclude Include="dynahex\body.h" />
+    <ClInclude Include="dynahex\collide_broad.h" />
+    <ClInclude Include="dynahex\collide_narrow.h" />
+    <ClInclude Include="dynahex\contacts.h" />
     <ClInclude Include="dynahex\core.h" />
     <ClInclude Include="dynahex\dynahex.h" />
     <ClInclude Include="dynahex\fgen.h" />
+    <ClInclude Include="dynahex\joints.h" />
     <ClInclude Include="dynahex\particle.h" />
     <ClInclude Include="dynahex\pcontacts.h" />
     <ClInclude Include="dynahex\pfgen.h" />
