--- a/3DGameEngine.vcxproj.filters
+++ b/3DGameEngine.vcxproj.filters
@@ -63,6 +63,21 @@
     <ClCompile Include="src\world.cpp">
       <Filter>Source Files\dynahex</Filter>
     </ClCompile>
+    <ClCompile Include="src\collide_broad.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
+    <ClCompile Include="src\collide_narrow.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
+    <ClCompile Include="src\contacts.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
+    <ClCompile Include="src\joints.cpp">
+      <Filter>Source Files\dynahex</Filter>
+    </ClCompile>
+    <ClCompile Include="demos\Ragdoll.cpp">
+      <Filter>Source Files\dynahex\demos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="olcConsoleGameEngine.h">
@@ -108,6 +123,18 @@
       <Filter>Header Files\dynahex</Filter>
     </ClInclude>
     <ClInclude Include="dynahex\world.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\collide_broad.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\collide_narrow.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\contacts.h">
+      <Filter>Header Files\dynahex</Filter>
+    </ClInclude>
+    <ClInclude Include="dynahex\joints.h">
       <Filter>Header Files\dynahex</Filter>
     </ClInclude>
   </ItemGroup>
